تعديل تنسيقات في ملف main.css

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ p {
 
 .Container {
     background-color: black;
-    background-image: url(/img/d89b16196de7911ea69f25b14df775f2.jpg);
+    background-image: url(../img/d89b16196de7911ea69f25b14df775f2.jpg);
     height: 300vh;
     background-repeat: no-repeat;
     background-size: cover;
